[package]
name = "rustlang-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "ch08-median_mode"
path = "src/ch08-median_mode.rs"

[[example]]
name = "ch08-pig-latin"
path = "src/ch08-pig-latin.rs"

[[example]]
name = "ch08-employee-db"
path = "src/ch08-employee-db.rs"
